--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
+async-trait = "0.1.80"
+bytes = "1.6.0"
+tun = { version = "0.6.1", features = ["async"] }
+tokio = { version = "1", features = ["full"] }
