--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,9 @@ async-trait = "0.1.80"
 bytes = "1.6.0"
 tun = { version = "0.6.1", features = ["async"] }
 tokio = { version = "1", features = ["full"] }
+log = "0.4.21"
+hkdf = "0.12.4"
+chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
+sha2 = "0.10.8"
+rand = "0.8.5"
+aead = { version = "0.5.2", features = ["bytes"] }
