--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tun-tap = "0.1.4"
 anyhow = "1"
-async-trait = "0.1.80"
 bytes = "1.6.0"
-tun = { version = "0.6.1", features = ["async"] }
-tokio = { version = "1", features = ["full"] }
 log = "0.4.21"
 hkdf = "0.12.4"
 chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
