--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,4 @@ sha2 = "0.10.8"
 rand = "0.8.5"
 aead = { version = "0.5.2", features = ["bytes"] }
 static_assertions = "1.1.0"
-nix = { version = "0.29.0", features = ["ioctl"] }
+nix = { version = "0.29.0", features = ["ioctl", "event"] }
