--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1"
 bytes = "1.6.0"
 log = "0.4.21"
 hkdf = "0.12.4"
-chacha20poly1305 = { version = "0.10", features = ["alloc", "std"] }
+chacha20poly1305 = { version = "0.10", features = ["alloc", "std", "reduced-round"] }
 sha2 = "0.10.8"
 rand = "0.8.5"
 aead = { version = "0.5.2", features = ["bytes"] }
