--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ rand = "0.8.5"
 aead = { version = "0.5.2", features = ["bytes"] }
 static_assertions = "1.1.0"
 nix = { version = "0.29.0", features = ["ioctl", "event"] }
+simple_logger = "5.0.0"
+clap = { version = "4.5.4", features = ["derive"] }
+clap-verbosity-flag = "2.2.0"
